fix errors and clean up

--- a/coneAnalysis/cone_analysis.ipynb
+++ b/coneAnalysis/cone_analysis.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 91,
    "id": "7b736fed-d08b-4e61-86f1-cbb02166fd3c",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
     "cone_angle = 25 # degrees\n",
     "max_distance = 10 # feet\n",
     "\n",
-    "def is_in_vision_cone(player1_row, player2_row) -> bool:\n",
+    "def is_in_vision_cone(player1_row: pl.DataFrame, player2_row) -> bool:\n",
     "    return (is_in_angle(player1_row, player2_row) and is_in_distance(player1_row, player2_row))\n",
     "\n",
     "def is_in_angle(player1, player2) -> bool:\n",
@@ -133,17 +133,7 @@
     "\n",
     "    angle = math.degrees(math.atan2(y_dist, x_dist))\n",
     "\n",
-    "    print('is_in_angle-----')\n",
-    "    print(x_dist)\n",
-    "    print(y_dist)\n",
-    "    print(angle)\n",
-    "    print(half_cone_angle)\n",
-    "    print(player1_orientation)\n",
-    "    print('----------------')\n",
-    "\n",
-    "\n",
-    "    # This is wrong - fix this @nidiyan\n",
-    "    if player1_orientation - half_cone_angle <= angle + player1_orientation <= player1_orientation + half_cone_angle:\n",
+    "    if player1_orientation - half_cone_angle <= angle <= player1_orientation + half_cone_angle:\n",
     "        return True\n",
     "    \n",
     "    return False\n",
@@ -154,12 +144,6 @@
     "\n",
     "    distance_between_players = math.sqrt(x_dist**2 + y_dist**2)\n",
     "    \n",
-    "    print('is_in_distance-----')\n",
-    "    print(x_dist)\n",
-    "    print(y_dist)\n",
-    "    print(distance_between_players)\n",
-    "    print('----------------')\n",
-    "\n",
     "    if distance_between_players <= max_distance:\n",
     "        return True\n",
     "    \n",
@@ -168,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 92,
    "id": "f8dabf1e-faea-4ab2-a8c0-526545b03cfe",
    "metadata": {},
    "outputs": [
@@ -191,23 +175,16 @@
       "│ f64       ┆ f64       ┆ f64       │\n",
       "╞═══════════╪═══════════╪═══════════╡\n",
       "│ 50.0      ┆ 46.0      ┆ 270.0     │\n",
-      "└───────────┴───────────┴───────────┘\n",
-      "is_in_angle-----\n",
-      "0.0\n",
-      "1.0\n",
-      "90.0\n",
-      "12.5\n",
-      "90.0\n",
-      "----------------\n"
+      "└───────────┴───────────┴───────────┘\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,8 +220,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "f74bc3e4-7599-405c-8b96-89b80ddb45f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "polars.dataframe.frame.DataFrame"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(tracking)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1420988d-4f2f-4475-820b-4ebaf909cefd",
    "metadata": {},
    "outputs": [],
    "source": []
