add looking to block or blocking fn

--- a/coneAnalysis/cone_analysis.ipynb
+++ b/coneAnalysis/cone_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "a691a07c-00b8-4843-90f2-efaaa252ea85",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,18 @@
     "import polars as pl\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import math as math"
+    "import math as math\n",
+    "# find a better way to import?\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.join(os.path.dirname(''), '..'))\n",
+    "\n",
+    "from constants import *\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "668e7aa3-6f90-4ca7-b9e8-b6e1e0573005",
    "metadata": {},
    "outputs": [],
@@ -29,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "147a0c33-dad8-4f51-a150-69b2fbbef229",
    "metadata": {},
    "outputs": [],
@@ -82,49 +88,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "53fa5a97-e18c-4bc1-8a2d-c784d4927c48",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "id": "8b95e15d-5986-4c0e-9b63-948e509e2a56",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def is_in_vision_cone(index, df):\n",
-    "    # Calculate angle between origin and point\n",
-    "    angle = math.atan2(y1 - y_origin, x1 - x_origin)\n",
-    "    # Convert angle to degrees\n",
-    "    angle_degrees = math.degrees(angle) % 360\n",
-    "    # Calculate angle difference between the point and the cone's direction\n",
-    "    angle_difference = abs((angle_degrees - degree + 360) % 360 - 180)\n",
-    "    \n",
-    "    # Check if the point is within the cone's vision\n",
-    "    if angle_difference <= 0.5 * degree and math.sqrt((x1 - x_origin) ** 2 + (y1 - y_origin) ** 2) <= radius:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "id": "7b736fed-d08b-4e61-86f1-cbb02166fd3c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cone_angle = 25 # degrees\n",
-    "max_distance = 10 # feet\n",
+    "CONE_ANGLE = 15 # degrees\n",
+    "MAX_DISTANCE = 5 # feet\n",
+    "BLOCKING_RADIUS = 1 # feet\n",
     "\n",
-    "def is_in_vision_cone(player1_row: pl.DataFrame, player2_row) -> bool:\n",
-    "    return (is_in_angle(player1_row, player2_row) and is_in_distance(player1_row, player2_row))\n",
+    "def looking_to_block_or_blocking(player1: pl.DataFrame, player2: pl.DataFrame) -> int:\n",
+    "    if is_blocking(player1, player2):\n",
+    "        return 2\n",
     "\n",
-    "def is_in_angle(player1, player2) -> bool:\n",
-    "    half_cone_angle = cone_angle / 2;\n",
+    "    if is_in_vision_cone(player1, player2):\n",
+    "        return 1\n",
+    "\n",
+    "    return 0\n",
+    "\n",
+    "def is_in_vision_cone(player1: pl.DataFrame, player2: pl.DataFrame) -> bool:\n",
+    "    return (is_in_angle(player2, player2) and is_in_distance(player2, player2))\n",
+    "\n",
+    "def is_in_angle(player1: pl.DataFrame, player2: pl.DataFrame) -> bool:\n",
+    "    half_cone_angle = CONE_ANGLE / 2\n",
     "\n",
     "    y_dist = player2.select(pl.col('adjustedY')).item() - player1.select(pl.col('adjustedY')).item()\n",
     "    x_dist = player2.select(pl.col('adjustedX')).item() - player1.select(pl.col('adjustedX')).item()\n",
@@ -138,21 +124,32 @@
     "    \n",
     "    return False\n",
     "\n",
-    "def is_in_distance(player1_index, player2_index) -> bool:\n",
+    "def is_in_distance(player1: pl.DataFrame, player2: pl.DataFrame) -> bool:\n",
+    "    distance_between_players = calculate_distance(player1, player2)\n",
+    "    print(distance_between_players)\n",
+    "    if distance_between_players <= MAX_DISTANCE:\n",
+    "        return True\n",
+    "    \n",
+    "    return False\n",
+    "\n",
+    "def is_blocking(player1: pl.DataFrame, player2: pl.DataFrame) -> bool:\n",
+    "    distance_between_players = calculate_distance(player1, player2)\n",
+    "    if distance_between_players <= BLOCKING_RADIUS:\n",
+    "        return True\n",
+    "\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "def calculate_distance(player1: pl.DataFrame, player2: pl.DataFrame) -> float:\n",
     "    y_dist = abs(player1.select(pl.col('adjustedY')).item() - player2.select(pl.col('adjustedY')).item())\n",
     "    x_dist = abs(player1.select(pl.col('adjustedX')).item() - player2.select(pl.col('adjustedX')).item())\n",
     "\n",
-    "    distance_between_players = math.sqrt(x_dist**2 + y_dist**2)\n",
-    "    \n",
-    "    if distance_between_players <= max_distance:\n",
-    "        return True\n",
-    "    \n",
-    "    return False"
+    "    return math.sqrt(x_dist**2 + y_dist**2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 24,
    "id": "f8dabf1e-faea-4ab2-a8c0-526545b03cfe",
    "metadata": {},
    "outputs": [
@@ -166,7 +163,7 @@
       "│ ---       ┆ ---       ┆ ---       │\n",
       "│ f64       ┆ f64       ┆ f64       │\n",
       "╞═══════════╪═══════════╪═══════════╡\n",
-      "│ 50.0      ┆ 45.0      ┆ 90.0      │\n",
+      "│ 50.0      ┆ 46.0      ┆ 90.0      │\n",
       "└───────────┴───────────┴───────────┘\n",
       "shape: (1, 3)\n",
       "┌───────────┬───────────┬───────────┐\n",
@@ -174,17 +171,18 @@
       "│ ---       ┆ ---       ┆ ---       │\n",
       "│ f64       ┆ f64       ┆ f64       │\n",
       "╞═══════════╪═══════════╪═══════════╡\n",
-      "│ 50.0      ┆ 46.0      ┆ 270.0     │\n",
-      "└───────────┴───────────┴───────────┘\n"
+      "│ 50.0      ┆ 50.0      ┆ 270.0     │\n",
+      "└───────────┴───────────┴───────────┘\n",
+      "4.0\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +201,7 @@
     "# validating :)\n",
     "data = {\n",
     "    'adjustedX': [50.00, 50.00],\n",
-    "    'adjustedY': [45.00, 46.00],\n",
+    "    'adjustedY': [46.00, 50.00],\n",
     "    'adjustedO': [90.00, 270.00]\n",
     "}\n",
     "\n",
@@ -215,34 +213,16 @@
     "print(player1)\n",
     "print(player2)\n",
     "\n",
+    "print(calculate_distance(player1, player2))\n",
+    "print(\n",
+    "\n",
     "is_in_vision_cone(player1, player2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "f74bc3e4-7599-405c-8b96-89b80ddb45f1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "polars.dataframe.frame.DataFrame"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(tracking)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "1420988d-4f2f-4475-820b-4ebaf909cefd",
+   "id": "329dcaeb-adb4-40ed-8755-90d7030ed284",
    "metadata": {},
    "outputs": [],
    "source": []
