--- a/coneAnalysis/cone_analysis.ipynb
+++ b/coneAnalysis/cone_analysis.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "8b95e15d-5986-4c0e-9b63-948e509e2a56",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
     "    return 0\n",
     "\n",
     "def is_in_vision_cone(player1: pl.DataFrame, player2: pl.DataFrame) -> bool:\n",
-    "    return (is_in_angle(player2, player2) and is_in_distance(player2, player2))\n",
+    "    return (is_in_angle(player1, player2) and is_in_distance(player1, player2))\n",
     "\n",
     "def is_in_angle(player1: pl.DataFrame, player2: pl.DataFrame) -> bool:\n",
     "    half_cone_angle = CONE_ANGLE / 2\n",
@@ -149,40 +149,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "id": "f8dabf1e-faea-4ab2-a8c0-526545b03cfe",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "shape: (1, 3)\n",
-      "┌───────────┬───────────┬───────────┐\n",
-      "│ adjustedX ┆ adjustedY ┆ adjustedO │\n",
-      "│ ---       ┆ ---       ┆ ---       │\n",
-      "│ f64       ┆ f64       ┆ f64       │\n",
-      "╞═══════════╪═══════════╪═══════════╡\n",
-      "│ 50.0      ┆ 46.0      ┆ 90.0      │\n",
-      "└───────────┴───────────┴───────────┘\n",
-      "shape: (1, 3)\n",
-      "┌───────────┬───────────┬───────────┐\n",
-      "│ adjustedX ┆ adjustedY ┆ adjustedO │\n",
-      "│ ---       ┆ ---       ┆ ---       │\n",
-      "│ f64       ┆ f64       ┆ f64       │\n",
-      "╞═══════════╪═══════════╪═══════════╡\n",
-      "│ 50.0      ┆ 50.0      ┆ 270.0     │\n",
-      "└───────────┴───────────┴───────────┘\n",
-      "4.0\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "False"
+       "2"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +178,7 @@
     "# validating :)\n",
     "data = {\n",
     "    'adjustedX': [50.00, 50.00],\n",
-    "    'adjustedY': [46.00, 50.00],\n",
+    "    'adjustedY': [49.00, 50.00],\n",
     "    'adjustedO': [90.00, 270.00]\n",
     "}\n",
     "\n",
@@ -210,13 +187,7 @@
     "player1 = test_df[0]\n",
     "player2 = test_df[1]\n",
     "\n",
-    "print(player1)\n",
-    "print(player2)\n",
-    "\n",
-    "print(calculate_distance(player1, player2))\n",
-    "print(\n",
-    "\n",
-    "is_in_vision_cone(player1, player2)"
+    "looking_to_block_or_blocking(player1, player2)"
    ]
   },
   {
