start creating main file

--- a/coneAnalysis/cone_analysis.ipynb
+++ b/coneAnalysis/cone_analysis.ipynb
@@ -204,24 +204,16 @@
    "source": [
     "test = pl.read_parquet('../labeledDataAttempt/labeledBlocks.parquet')\n",
     "\n",
+    "# test=tracking.with_columns([\n",
+    "#     pl.when(pl.col('playDirection')=='right').then(pl.col('dir').cast(pl.Float64)).otherwise(180-pl.col('dir').cast(pl.Float64)).alias('adjustedDir'),\n",
+    "#     pl.when(pl.col('playDirection')=='right').then(pl.col('o').cast(pl.Float64)).otherwise(180-pl.col('o').cast(pl.Float64)).alias('adjustedO'),\n",
+    "# ])\n",
+    "\n",
     "blocking_df = test.select(\n",
     "    'o', 'dir', 'adjustedX', 'adjustedY', 'oDefender', 'dirDefender', 'adjustedXDefender', 'adjustedYDefender'\n",
     ")\n",
     "\n",
-    "blocking_df.apply(looking_to_block_or_blocking_df_fn)\n",
-    "\n",
-    "\n",
-    "\n",
-    "# normalize position\n",
-    "# test=test.with_columns([\n",
-    "#     pl.when(pl.col('playDirection')=='right').then(53.3-pl.col('y')).otherwise(pl.col('y')).alias('adjustedX'),\n",
-    "#     pl.when(pl.col('playDirection')=='right').then(pl.col('x')).otherwise(120-pl.col('x')).alias('adjustedY')\n",
-    "# ])\n",
-    "\n",
-    "# test=tracking.with_columns([\n",
-    "#     pl.when(pl.col('playDirection')=='right').then(pl.col('dir').cast(pl.Float64)).otherwise(180-pl.col('dir').cast(pl.Float64)).alias('adjustedDir'),\n",
-    "#     pl.when(pl.col('playDirection')=='right').then(pl.col('o').cast(pl.Float64)).otherwise(180-pl.col('o').cast(pl.Float64)).alias('adjustedO'),\n",
-    "# ])\n"
+    "blocking_df.apply(looking_to_block_or_blocking_df_fn)\n"
    ]
   },
   {
